<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Controllers.MainActivity2Nivel8">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:text="@string/jugadorNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="65dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/totalScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textViewManzanas"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:text="@string/etVidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <ImageView
        android:id="@+id/imageViewVidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageViewNumUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewManzanas"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageViewSigno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="236dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewNumUno"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/division" />

    <ImageView
        android:id="@+id/imageViewNumDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/editTextRespuesta"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="376dp"
        android:ems="10"
        android:hint="@string/etRespuesta"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fondoboton"
        android:onClick="comparar"
        android:text="@string/btnSumar"
        android:textColor="@color/icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNivelUno"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#E6E2E2"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>