<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".Controllers.MainActivity">

    <ImageView
        android:id="@+id/imageView_Personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/personaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/fresa" />

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="268dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_Jugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/fondoboton"
        android:text="@string/btn_texto"
        android:textColor="@color/white"
        android:onClick="jugar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/fondoet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Jugar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/icons" />
</androidx.constraintlayout.widget.ConstraintLayout>